=================
Changes for Crate
=================

Unreleased
==========

 - Removed the limitation that all selected columns must also appear in the
   ORDER BY clause for joins.

 - Updated crate certificates in the ssl truststore.

 - Added support for explicit INNER JOIN .. ON syntax.

 - Fixed an issue that could cause bulk update requests to fail if the
   ``bulkArgs`` contained only one item

 - added os and jvm infos to sys.nodes table

 - sort columns in ``sys`` and `` information_schema`` tables
   alphabetically when selecting all columns with ``*``

2015/11/16 0.53.0
=================

 - Updated crate-admin to 0.16.0 which includes following changes:

   - The table list is now fully searchable and sorted by table name within
     its schemas.

   - fix: charts are not correctly displayed in Microsoft Edge browser.

   - UDC: identify anonymous user with cluster id.
     Both user id and cluster id are anonymous traits.
     Note: You can disable UDC via the `udc.enabled` setting on the Crate server.

 - implement ``intersects`` scalar function

 - fix: properly restrict partitioned by columns to primitive types
        during analysis

 - added functionality to index and match geo shapes

 - restrict WITHIN function to only accept geo_point (and compatible types)
   as first argument

 - Added snapshot and restore functionality

 - Changed crate launch scripts to no longer support extending the
   CRATE_CLASSPATH environment variable

 - Added initial limited cross and inner join support

 - Updated crate/elasticsearch for improved logging on graceful shutdown errors

 - Added ``array_cat``, ``array_unique`` and ``array_difference`` scalar 
   functions. Also modified ``concat`` function to resolve to ``array_cat`` when
   ``concat`` function is called with 2 array args, so the operator ``||`` will 
   work with arrays.

2015/11/11 0.52.2
=================

 - Updated crate-admin to 0.15.3 which includes following changes:
